tests/snapshots/snapshots__pipeline@annot_effect_unused.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/annot_effect_unused.pr
---
== tokens ==
VOpen Effect UIdent("State") VOpen Ident("get") LParen RParen Colon KwInt VClose VSemi Fn Ident("h") LParen RParen Colon KwInt Bang LBrace UIdent("State") RBrace Eq Int(IntLit { value: 1, suffix: None }) VSemi Fn Ident("main") LParen RParen Eq VOpen Ident("println") LParen Handle Ident("h") LParen RParen With LBrace Ident("get") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 0, suffix: None }) RParen Comma Return Ident("x") FatArrow Ident("x") RBrace RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "State",
            params: [],
            ops: [
                EffOp {
                    name: "get",
                    params: [],
                    ret: Int,
                    grade: Many,
                },
            ],
            span: 0..26,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "h",
            params: [],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "State",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 1,
                        suffix: None,
                    },
                ),
                span: 53..54,
            },
            wheres: [],
            span: 28..54,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 70..77,
                    },
                    [
                        Spanned {
                            node: Handle(
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "h",
                                            ),
                                            span: 85..86,
                                        },
                                        [],
                                    ),
                                    span: 85..88,
                                },
                                [
                                    Op(
                                        "get",
                                        [],
                                        "k",
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "k",
                                                    ),
                                                    span: 118..119,
                                                },
                                                [
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 0,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 120..121,
                                                    },
                                                ],
                                            ),
                                            span: 118..122,
                                        },
                                    ),
                                    Return(
                                        "x",
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 140..141,
                                        },
                                    ),
                                ],
                                Exhaustive,
                            ),
                            span: 78..145,
                        },
                    ],
                ),
                span: 70..146,
            },
            wheres: [],
            span: 56..146,
        },
    ],
}

== types ==
h : () -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn h() =
  return 1
fn main() =
  handle
    h()
  with
    get(k) =>
      return 0 to t@0
      return k to t@1
      (force t@1)(t@0)
    return x =>
      return x
  to t@2
  print t@2 to t@3
  print_nl

== fbip (rc) ==
fn h() =
  return 1
fn main() =
  handle
    h()
  with
    get(k) =>
      return 0 to t@0
      return k to t@1
      (force t@1)(t@0)
    return x =>
      return x
  to t@2
  print t@2 to t@3
  drop t@3
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [792 x i8] c"scheme  prism-core-hash-v2\0Abundle  00678d80800af0364c5390630e17dd5b2df5697496dcf729248f3862c2e95615\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:00678d80800af0364c5390630e17dd5b2df5697496dcf729248f3862c2e95615\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_h  0ac7c9ad242c723285ef6a5e65f10fbab44504860894322bcc117a433827ccfb  h\0Afn      prismfn_main  e12056bf40db52bb7655ea47b058168fbc901d4af20d7995337a703c9776b7bf  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [883 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  00678d80800af0364c5390630e17dd5b2df5697496dcf729248f3862c2e95615\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:00678d80800af0364c5390630e17dd5b2df5697496dcf729248f3862c2e95615\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_h 0ac7c9ad242c723285ef6a5e65f10fbab44504860894322bcc117a433827ccfb h arity 0 slots abi-word[]\0Astate prismfn_main e12056bf40db52bb7655ea47b058168fbc901d4af20d7995337a703c9776b7bf main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"e12056bf40db52bb7655ea47b058168fbc901d4af20d7995337a703c9776b7bf\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  call void @prism_print_int(i64 3)
  call void @prism_rc_dec(i64 3)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

attributes #0 = { nounwind }

== run ==
output: [1]
result: ()
