tests/snapshots/snapshots__pipeline@borrow_effectful.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/borrow_effectful.pr
---
== tokens ==
VOpen Fn Ident("noisy") LParen Borrow Ident("x") RParen Eq VOpen Ident("println") LParen Ident("x") RParen VSemi Ident("x") VClose VSemi Fn Ident("main") LParen RParen Eq Ident("noisy") LParen Int(IntLit { value: 3, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "noisy",
            params: [
                Param {
                    name: "x",
                    ty: None,
                    borrow: true,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 23..30,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "x",
                                    ),
                                    span: 31..32,
                                },
                            ],
                        ),
                        span: 23..33,
                    },
                    Spanned {
                        node: Var(
                            "x",
                        ),
                        span: 36..37,
                    },
                ),
                span: 23..37,
            },
            wheres: [],
            span: 0..37,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "noisy",
                        ),
                        span: 51..56,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 3,
                                    suffix: None,
                                },
                            ),
                            span: 57..58,
                        },
                    ],
                ),
                span: 51..59,
            },
            wheres: [],
            span: 39..59,
        },
    ],
}

== types ==
Type Error: `noisy` has a `borrow` parameter but is not pure; it performs IO
   ╭─[ <source>:1:1 ]
   │
 1 │ ╭─▶ fn noisy(borrow x) =
   ┆ ┆   
 3 │ ├─▶   x
   │ │         
   │ ╰───────── `noisy` has a `borrow` parameter but is not pure; it performs IO
───╯
