tests/snapshots/snapshots__pipeline@canonical_duplicate.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/canonical_duplicate.pr
---
== tokens ==
VOpen Class UIdent("Ord") LParen Ident("a") RParen VOpen Ident("cmp") Colon LParen Ident("a") Comma Ident("a") RParen Arrow KwInt VClose VSemi Instance Ident("ordInt") Colon UIdent("Ord") LParen KwInt RParen VOpen Fn Ident("cmp") LParen Ident("x") Comma Ident("y") RParen Eq VOpen If Ident("x") Lt Ident("y") Then VOpen Minus Int(IntLit { value: 1, suffix: None }) VClose VSemi Else VOpen Int(IntLit { value: 1, suffix: None }) VClose VClose VClose VSemi Instance Ident("ordRev") Colon UIdent("Ord") LParen KwInt RParen VOpen Fn Ident("cmp") LParen Ident("x") Comma Ident("y") RParen Eq VOpen If Ident("x") Lt Ident("y") Then VOpen Int(IntLit { value: 1, suffix: None }) VClose VSemi Else VOpen Minus Int(IntLit { value: 1, suffix: None }) VClose VClose VClose VSemi Canonical UIdent("Ord") LParen KwInt RParen Eq Ident("ordInt") VSemi Canonical UIdent("Ord") LParen KwInt RParen Eq Ident("ordRev") VSemi Fn Ident("main") LParen RParen Eq Ident("cmp") LParen Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 2, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Ord",
            param: "a",
            supers: [],
            methods: [
                ClassMethod {
                    name: "cmp",
                    ty: Fun(
                        [
                            Var(
                                "a",
                            ),
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Int,
                    ),
                    span: 15..18,
                },
            ],
            span: 0..34,
        },
    ],
    instances: [
        InstanceDecl {
            name: "ordInt",
            class: "Ord",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "cmp",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                        Param {
                            name: "y",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: If(
                            Spanned {
                                node: Bin(
                                    Lt,
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 87..88,
                                    },
                                    Spanned {
                                        node: Var(
                                            "y",
                                        ),
                                        span: 91..92,
                                    },
                                ),
                                span: 87..92,
                            },
                            Spanned {
                                node: Neg(
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 105..106,
                                    },
                                ),
                                span: 104..106,
                            },
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 122..123,
                            },
                        ),
                        span: 84..123,
                    },
                    wheres: [],
                    span: 65..123,
                },
            ],
            module: "",
            span: 36..123,
        },
        InstanceDecl {
            name: "ordRev",
            class: "Ord",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "cmp",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                        Param {
                            name: "y",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: If(
                            Spanned {
                                node: Bin(
                                    Lt,
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 176..177,
                                    },
                                    Spanned {
                                        node: Var(
                                            "y",
                                        ),
                                        span: 180..181,
                                    },
                                ),
                                span: 176..181,
                            },
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 193..194,
                            },
                            Spanned {
                                node: Neg(
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 211..212,
                                    },
                                ),
                                span: 210..212,
                            },
                        ),
                        span: 173..212,
                    },
                    wheres: [],
                    span: 154..212,
                },
            ],
            module: "",
            span: 125..212,
        },
    ],
    canonicals: [
        CanonicalDecl {
            class: "Ord",
            head: Int,
            name: "ordInt",
            span: 214..241,
        },
        CanonicalDecl {
            class: "Ord",
            head: Int,
            name: "ordRev",
            span: 243..270,
        },
    ],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "cmp",
                        ),
                        span: 284..287,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 288..289,
                        },
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 2,
                                    suffix: None,
                                },
                            ),
                            span: 291..292,
                        },
                    ],
                ),
                span: 284..293,
            },
            wheres: [],
            span: 272..293,
        },
    ],
}

== types ==
[E3033] Type Error: duplicate canonical designation for Ord(Int)
    ╭─[ <source>:20:1 ]
    │
 20 │ canonical Ord(Int) = ordRev
    │ ─────────────┬─────────────  
    │              ╰─────────────── duplicate canonical designation for Ord(Int)
────╯
